# PypptRoadSign_Git

./: LICENSE  MANIFEST  README.md  setup.cfg  setup.py
Demo/: Demo.ipynb  output.pptx
PypptRoadSign/: __init__.py  background.py  background_json.py  background_style.json  sign.py
PypptRoadSign.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PypptRoadSign/Arrows/: ArrowBase.py  ArrowMoveStraight.py
