[metadata]
# replace with your username:
name = PypptRoadSign
version = 0.1
author = Haosong Liu
author_email = haosongliuofficial@gmail.com
description = QXWZ Power Point Road Sign Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/liulhs/PypptRoadSign_Git
project_urls =
    Bug Tracker = https://github.com/liulhs/PypptRoadSign_Git/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description-file = README.md
